--- a/sce_frontend/package.json
+++ b/sce_frontend/package.json
@@ -14,12 +14,15 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "apisauce": "^3.0.1",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.2"
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-picker": "^7.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
