--- a/sce_frontend/package.json
+++ b/sce_frontend/package.json
@@ -17,7 +17,10 @@
     "apisauce": "^3.0.1",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-auth-session": "^5.5.2",
+    "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "^15.0.5",
+    "expo-secure-store": "^13.0.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
